# EonTimer

./: .EonTimer.pro.swp  .clang-format  .gitignore  .prettierrc  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EonTimer  EonTimer.json  EonTimer.pro  EonTimer.py  EonTimer.spec  LICENSE.md  PLAN.md  README.md  TODO.md  appveyor.yml  build.gradle  conanfile.txt  eon-timer.py  eon-timer.spec  eslint.config.js  gradle.properties  index.html  main.cpp  main.css  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.gradle  setup.py  theme.py  tsconfig.json  vite.config.ts
.ci/: after_build.bat  after_build.sh  before_build.bat  before_build.sh  before_install.sh  build.bat  build.sh  install.bat  install.sh
.ci/linux/: after_build.sh  before_build.sh  build.sh  install.sh
.ci/macos/: after_build.sh  before_build.sh  build.sh  install.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  check-preview-token.yml  codeql.yml  deploy.yml  pr-build.yml  pr-preview.yml  pr.yml  stale.yml
eon_timer/: __init__.py  app.py  app_config.py  app_state.py  app_version.py  app_widget.py  app_window.py  console.py  container.py  phase_runner.py  theme_manager.py  timer_actions.py  timer_widget.py  update_manager.py  util.py  welcome_dialog.py
eon_timer/action/: __init__.py  actions.py  sound_manager.py  visual_manager.py
eon_timer/gen3/: __init__.py  config.py  widget.py
eon_timer/gen4/: __init__.py  config.py  model.py  widget.py
eon_timer/gen5/: __init__.py  config.py  widget.py
eon_timer/gui/: __init__.py  app_widget.py  app_window.py  field_set.py  form_layout.py  form_widget.py  scroll_widget.py  settings_dialog.py  timer_display_wdiget.py  timer_display_widget.py  util.py
eon_timer/gui/settings/: action_widget.py  settings_dialog.py  timer_widget.py
eon_timer/gui/timers/: custom.py  gen3.py  gen4.py  gen5.py
eon_timer/res/: main.qml
eon_timer/resources/: .gitignore  __init__.py  main.scss
eon_timer/resources/fonts/: __init__.py
eon_timer/resources/styles/: main.scss
eon_timer/settings/: __init__.py  action_config.py  action_sound.py  action_widget.py  config.py  dialog.py  settings_config.py  settings_dialog.py  timer_config.py  timer_widget.py
eon_timer/settings/action/: action_color.py  action_mode.py  config.py  model.py  widget.py
eon_timer/settings/advanced/: widget.py
eon_timer/settings/other/: model.py  update_model.py  widget.py
eon_timer/settings/theme/: model.py  widget.py
eon_timer/settings/timer/: config.py  console.py  model.py  widget.py
eon_timer/theme/: theme_engine.py  theme_manager.py
eon_timer/timers/: __init__.py  calibrator.py  delay_timer.py  enhanced_entralink_timer.py  entralink_timer.py  entralink_timer_plus.py  frame_timer.py  second_timer.py  timer.py  timer_widget.py  util.py
eon_timer/timers/custom/: custom_phase.py  custom_phase_widget.py  model.py  timer.py  widget.py
eon_timer/timers/gen3/: __init__.py  model.py  timer.py  widget.py
eon_timer/timers/gen4/: __init__.py  model.py  timer.py  widget.py
eon_timer/util/: __init__.py  clock.py  const.py  constants.py  enum.py  form_layout.py  form_widget.py  lifecycle.py  loggers.py  scroll_widget.py  strings.py  updates.py  util.py
gradle/wrapper/: gradle-wrapper.properties
gui/: ApplicationPane.cpp  ApplicationPane.h  ApplicationWindow.cpp  ApplicationWindow.h  Gen4TimerPane.cpp  Gen4TimerPane.h  TimerDisplayPane.cpp  TimerDisplayPane.h
gui/util/: FontHelper.cpp  FontHelper.h
make/: CMakeCache.txt  EonTimer  cmake_install.cmake
make/EonTimer_autogen/: mocs_compilation.cpp
models/: Sound.h  TimerState.cpp  TimerState.h
public/: 404.html
resources/: resources.qrc
resources/css/: linux.css  macos.css  main.css  windows.css
resources/macos/: Info.plist
resources/styles/: functions.scss  main.scss  variables.scss
services/: CalibrationService.cpp  CalibrationService.h  SettingsService.cpp  SettingsService.h  SoundService.cpp  SoundService.h  TimerService.cpp  TimerService.h
services/timer/: DelayTimer.cpp  DelayTimer.h  SecondTimer.cpp  SecondTimer.h
src/: App.css  App.tsx  app.h.in  index.css  main.cpp  main.tsx  vite-env.d.ts
src/audio/: sounds.ts
src/components/: CustomPanel.tsx  ExternalLinkDialog.tsx  Gen3Panel.tsx  Gen4Panel.tsx  Gen5Panel.tsx  NewProfileDialog.tsx  ProfileSelector.tsx  SettingsDialog.tsx  TimerDisplay.tsx  TimerOverlayDialog.tsx  timerPanel.ts
src/gui/: ApplicationPane.cpp  ApplicationPane.h  ApplicationWindow.cpp  ApplicationWindow.h  Gen4TimerPane.cpp  Gen4TimerPane.h  TimerDisplayPane.cpp  TimerDisplayPane.h
src/hooks/: useAudio.ts  useEffectiveSettings.ts  usePhaseRunner.ts  useTheme.ts  useUrlParams.ts  useWakeLock.ts
src/models/: ActionMode.cpp  ActionMode.h  Console.cpp  Console.h  Gen5TimerMode.cpp  Gen5TimerMode.h  Sound.cpp  Sound.h  TimerState.cpp  TimerState.h
src/python/: main.py
src/services/: CalibrationService.cpp  CalibrationService.h  SoundService.cpp  SoundService.h  TimerService.cpp  TimerService.h  TimerThread.cpp  TimerThread.h
src/store/: index.ts  profiles.ts
src/timers/: calibrator.ts  customTimer.ts  delayTimer.ts  entralinkTimer.ts  frameTimer.ts  gen3Timer.ts  gen4Timer.ts  gen5Timer.ts  secondTimer.ts
src/util/: Clock.cpp  Clock.h  Functions.cpp  Functions.h  QRunnableFunction.cpp  QRunnableFunction.h  WorkerThread.cpp  WorkerThread.h
src/utils/: constants.ts  device.ts  profileIO.ts  types.ts
src/workers/: timerWorker.ts
test/: helpers.py
test/timers/: calibrator_test.py  delay_timer_test.py  entralink_timer_test.py  frame_timer_test.py  second_timer_test.py
themes/default/: main.scss
themes/pokeball/: info.json
ui/: ApplicationPane.cpp  ApplicationPane.h  ApplicationWindow.cpp  ApplicationWindow.h  CustomTimerPane.cpp  CustomTimerPane.h  Gen3TimerPane.cpp  Gen3TimerPane.h  Gen4TimerPane.cpp  Gen4TimerPane.h  Gen5TimerPane.cpp  Gen5TimerPane.h  TimerDisplayPane.cpp  TimerDisplayPane.h
ui/util/: FontHelper.cpp  FontHelper.h
util/: Functions.cpp  ThreadPool.cpp  ThreadPool.h
(+646 files in other folders)
